static/landing_map/style.css
/* navbar styling */
nav.navbar{
    background-color:#18435A;
    padding-left: 0;
    padding-right: 0;
}

a.nav-brand {
    color: #FFFFFF;
    font-size: 1.5em;
    font-weight: bold;
    text-decoration: none !important;
    height: 75px;
    line-height: 75px;
}

a.nav-list{
    color: #FFFFFF !important;
    font-size:1em;
    text-decoration: none;
    height: 75px !important;
    line-height: 40px !important;
    padding-left:30px !important;
}

a.nav-brand:hover{
    opacity: 0.5;
}

a.nav-list:hover{
    opacity: 0.5;
}

.padding{
    text-align: left;
    padding-left: 30px;
    padding-right: 25%;
}

.ctain {
    width: 100%;
    position: relative;
    text-align: center;
    color: white;
}

.centered {
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.boxshadow{
    box-shadow: 0px 0px 10px 1px gray;
    padding-left: 5px;
    padding-right: 5px;
    margin: 1% 1% 1% 1%;
    border-radius: 3%;
}

.imgpadding{
    text-align: left;
    padding-left: 30px;
    padding-right: 30px;
}
/*
body{
    overflow: hidden;
    }
*/
/* pin card styling */
div.cards{
    height:500px;
    overflow-y: scroll
}
p.accessible{
    color:#4F7C5E;}
p.not_accessible{
    color:#BC4F00;}
#map {
    height: 600px;
}


/* add to favorite */
.add{
    position: relative;
    margin-top: 10px;
    margin-bottom: 10px;
    display: flex;
}

.add button{
    width: 200px;
    background-color: #FFFFFF;
    color: #18435A;
}


/* filter button styling */
.filter{
    position: relative;
    margin-top: 10px;
    margin-bottom: 10px;
    display: flex;
}

.filter p{
    font-weight: bold;
    margin-right: auto;
    margin-top: 10px;
}

.filter button{
    margin-left: auto;
    width: 100px;
    background-color: #18435A;
}

/* dropdown menu */
.dropdown-menu{
    padding: 20px;
    width: 300px;
}

.dropdown-menu button{
    margin-top: 20px;
    width: 125px;
    background-color: #18435A;
}

.dropdown-menu #clear{
    background-color: transparent;
    color: #18435A;
    font-weight: bold;
}

.dropdown-menu .form-check label{
    font-weight: 400;
}

.dropdown-menu .form-check #fav{
    font-weight: bold;
    /* margin-right: 100px; */
}


/* results */
.results {
    float: right !important;
    padding-top: 15px !important;
}


/* geo coder */
.mapboxgl-ctrl-geocoder {
    width: 100% !important;
    max-width: 100% !important;
}


/* copyright */
.copyright {
    background-color: rgba(0, 0, 0, 0.05);
    margin-top: 20px;
}

/* reports */
.view-report p{
    margin-bottom: 15px;
}

.view-report h5{
    font-weight: bold;
    margin-bottom: 5px;
}

.modal-footer .thumbs{
    float: left;
}

.well{
    scroll-behavior: smooth;
}

